tree-sitter-beans/grammar.js
    source_file: ($) => seq(optional($.package_declaration), repeat($._top_level)),

    // `package money`. The name is the package's own, not the last segment of
    // the path that reaches it: `shop/transport_v2/` may declare
    // `package transport`.
    package_declaration: ($) => seq('package', field('name', $.identifier)),

    _top_level: ($) => choice($.import_declaration, $._declaration),

    import_declaration: ($) =>
      seq(
        'import',
        field('path', $.import_path),
        optional(seq('as', field('alias', $.identifier))),
      ),

    // `std.io`, `shop.money.fx`, `github.com/acme/http`
    import_path: (_) => token(/[A-Za-z_][A-Za-z0-9_]*([./][A-Za-z0-9_.-]+)*/),

    // ---- modifiers --------------------------------------------------------
    // `pub unique class`, `pub extern "C" packed struct`, `feature "aes" fn`.
    // `unique`, `packed`, `align` and `feature` are contextual: ordinary
    // identifiers anywhere else. That is why the modifier set is narrowed per
    // declaration below rather than shared — a keyword the parser allows in a
    // position is a keyword the lexer will produce there, so `var packed: Bytes`
    // and a class field named `align` have to stay out of modifier positions.
    _modifier: ($) =>
      choice(
        $.visibility_modifier,
        $.extern_modifier,
        $.feature_modifier,
        $.align_modifier,
        $.unique_modifier,
        $.packed_modifier,
        $.opaque_modifier,
        $.static_modifier,
        $.override_modifier,
      ),

    visibility_modifier: (_) => 'pub',
    static_modifier: (_) => 'static',
    override_modifier: (_) => 'override',
    unique_modifier: (_) => 'unique',
    packed_modifier: (_) => 'packed',
    opaque_modifier: (_) => 'opaque',
    extern_modifier: ($) => seq('extern', optional(field('abi', $.string_literal))),
    feature_modifier: ($) => seq('feature', field('feature', $.string_literal)),

    // `align` and its `(` are one token so that a field or local called
    // `align` — the compiler's own layout.b has one — still lexes as a name.
    align_modifier: ($) =>
      seq(
        alias(token(/align[ \t]*\(/), $.align_keyword),
        field('alignment', $.integer_literal),
        ')',
      ),

    // ---- functions --------------------------------------------------------
    // Greedy: the body belongs to this declaration. A body-less `fn` is an
    // interface method signature, and one is never followed by a bare block.
    function_declaration: ($) =>
      prec.right(seq(
        repeat($._modifier),
        'fn',
        field('name', $.identifier),
        optional(field('type_parameters', $.type_parameters)),
        field('parameters', $.parameter_list),
        optional(seq('->', field('return_type', $._type))),
        // `pub extern "C" fn add(...) -> i32 as "beans_wasm_add"` — the
        // exported C symbol name.
        optional(seq('as', field('export_name', $.string_literal))),
        optional(field('body', $.block)),
      )),

    parameter_list: ($) => seq('(', optional(commaList($.parameter)), ')'),

    parameter: ($) =>
      seq(
        optional(field('mode', $.parameter_mode)),
        field('name', $.identifier),
        ':',
        field('type', $._type),
      ),

    type_parameters: ($) => seq('<', commaList($.type_parameter), '>'),

    type_parameter: ($) =>
      seq(
        field('name', $.type_identifier),
        optional(seq('implements', field('bounds', $.type_bounds))),
      ),

    // `T implements A & B`
    type_bounds: ($) => sepBy1('&', $._type),

    // ---- types ------------------------------------------------------------
    class_declaration: ($) =>
      seq(
        repeat($._modifier),
        'class',
        field('name', $.type_identifier),
        optional(field('type_parameters', $.type_parameters)),
        optional(seq('extends', field('superclass', $._type))),
        optional(field('interfaces', $.implements_clause)),
        field('body', $.declaration_body),
      ),

    // A class lists its interfaces with commas: `implements Tagged, Counted`.
    // Generic bounds use `&` instead — see type_parameter.
    implements_clause: ($) => seq('implements', commaSep1($._type)),

    // `extern "C" opaque struct Handle` declares an incomplete C type, so the
    // body is optional here.
    struct_declaration: ($) =>
      prec.right(
        seq(
          repeat($._modifier),
          'struct',
          field('name', $.type_identifier),
          optional(field('type_parameters', $.type_parameters)),
          optional(field('body', $.declaration_body)),
        ),
      ),

    interface_declaration: ($) =>
      seq(
        repeat($._modifier),
        'interface',
        field('name', $.type_identifier),
        optional(field('type_parameters', $.type_parameters)),
        optional(seq('extends', field('superclass', $.type_bounds))),
        field('body', $.declaration_body),
      ),

    declaration_body: ($) =>
      seq('{', repeat(choice($.field_declaration, $.function_declaration)), '}'),

    // A field takes `pub` and `align(N)` — nothing else, so `packed: Bytes`
    // stays a field named `packed`.
    field_declaration: ($) =>
      seq(
        optional($.visibility_modifier),
        optional($.align_modifier),
        field('name', $.identifier),
        ':',
        field('type', $._type),
        optional(seq('=', field('default', $._expression))),
      ),

    enum_declaration: ($) =>
      seq(
        repeat($._modifier),
        'enum',
        field('name', $.type_identifier),
        optional(field('type_parameters', $.type_parameters)),
        field('body', $.enum_body),
      ),

    enum_body: ($) =>
      seq(
        '{',
        repeat(seq($.enum_variant, optional(','))),
        repeat($.function_declaration),
        '}',
      ),

    enum_variant: ($) =>
      seq(field('name', $.identifier), optional(field('payload', $.parameter_list))),

    // ---- type expressions -------------------------------------------------
    _type: ($) =>
      choice(
        $.primitive_type,
        $.generic_type,
        $.type_identifier,
        $.scoped_type_identifier,
        $.function_type,
        $.array_type,
      ),

    // No token precedence here on purpose. `int` is a prefix of `interface`,
    // and raising `int` above the other keywords makes the keyword lexer stop
    // at `int` and never reach `interface`.
    primitive_type: (_) =>
      token(
        choice(...data.types.primitives, data.types.unit, new RegExp(data.types.simdTypeRegex)),
      ),

    generic_type: ($) =>
      seq(
        field('name', choice($.type_identifier, $.scoped_type_identifier)),
        field('type_arguments', $.type_arguments),
      ),

    type_arguments: ($) => seq(token(prec(1, '<')), commaSep1($._type), '>'),

    // `[i32; 4]`, `[RawPtr<u8>; 2]`
    array_type: ($) =>
      seq('[', field('element', $._type), ';', field('length', $._expression), ']'),

    type_identifier: (_) => token(/[A-Z][a-zA-Z0-9_]*/),

    // ---- statements -------------------------------------------------------
    block: ($) => seq('{', repeat($._statement), '}'),

    // `if` and `match` are values in Beans, so they reach statement position
    // through `expression_statement` rather than having a second rule each.
    _statement: ($) =>
      choice(
        $.variable_declaration,
        $.assignment_statement,
        $.return_statement,
        $.break_statement,
        $.continue_statement,
        $.defer_statement,
        $.for_statement,
        $.unsafe_block,
        $.brew_statement,
        $.expression_statement,
      ),

    // Only `pub`: a local takes no other modifier, and letting more in here
    // would make `var packed: Bytes` lex `packed` as a keyword.
    // `const NAME: T = <expr>` is module level and has no storage: the
    // checker folds the initializer and every use is that value. `const` is
    // contextual — a declaration word only in `const <NAME>`, an ordinary
    // identifier everywhere else — so the type and the value are both
    // required here, which is what makes the shape unambiguous.
    variable_declaration: ($) =>
      seq(
        optional($.visibility_modifier),
        field('kind', choice('let', 'var')),
        field('name', $.identifier),
        optional(seq(':', field('type', $._type))),
        optional(seq('=', field('value', choice($._expression, $.brew_expression)))),
      ),

    // `brew f(args)` starts the call on a child fiber of the current scope.
    // Contextual, and deliberately not part of `_expression`: the compiler
    // takes it only as a statement or a `let`/`var` initializer — "a Brew
    // handle is scope-bound, so it cannot ride inside a larger expression".
    // The keyword comes from the external scanner, which emits it only when
    // a call really follows, so `group.brew(...)`, `var brew: int = 5` and
    // `brew = brew + 1` all stay ordinary names, exactly as the compiler
    // reads them.
    return_statement: ($) =>
      prec.right(seq('return', optional(field('value', $._expression)))),
    for_statement: ($) =>
      seq(
        'for',
        optional(
          choice(
            seq(
              field('binding', $.identifier),
              ':',
              field('binding_type', $._type),
              'in',
              field('iterable', $._expression),
            ),
            field('condition', $._expression),
          ),
        ),
        field('body', $.block),
      ),

    expression_statement: ($) => $._expression,

    // ---- expressions ------------------------------------------------------
    _expression: ($) =>
      choice(
        $.identifier,
        $.type_identifier,
        $.self_expression,
        $.super_expression,
        $.integer_literal,
        $.float_literal,
        $.boolean_literal,
        $.string_literal,
        $.raw_string_literal,
        $.list_literal,
        $.map_literal,
        $.struct_literal,
        $.parenthesized_expression,
        $.unary_expression,
        $.binary_expression,
        $.range_expression,
        $.cast_expression,
        $.call_expression,
        $.field_expression,
        $.index_expression,
        $.try_expression,
        $.new_expression,
        $.layout_expression,
        $.lambda_expression,
        $.if_expression,
        $.match_expression,
      ),

    self_expression: (_) => 'self',
    parenthesized_expression: ($) => seq('(', $._expression, ')'),

    // `-x`, `!ok`, `~bits`, `move out`, `inout buffer`
    unary_expression: ($) =>
      prec.right(
        PREC.unary,
        seq(
          field('operator', choice('-', '!', '~', 'move', 'take', 'inout')),
          field('operand', $._expression),
        ),
      ),

    binary_expression: ($) => {
      const levels = [
        [PREC.or, ['||']],
        [PREC.and, ['&&']],
        [PREC.equality, ['==', '!=']],
        [PREC.comparison, ['<', '<=', '>', '>=']],
        [PREC.bitor, ['|']],
        [PREC.bitxor, ['^']],
        [PREC.bitand, ['&']],
        [PREC.shift, ['<<', '>>']],
        [PREC.additive, ['+', '-']],
        [PREC.multiplicative, ['*', '/', '%']],
      ];
      return choice(
        ...levels.flatMap(([precedence, operators]) =>
          operators.map((operator) =>
            prec.left(
              precedence,
              seq(
                field('left', $._expression),
                field('operator', operator),
                field('right', $._expression),
              ),
            ),
          ),
        ),
      );
    },

    // Non-associative, above `||`, exactly like Parser::parse_expr.
    range_expression: ($) =>
      prec.left(
        PREC.range,
        seq(
          field('start', $._expression),
          field('operator', choice('..', '..=')),
          field('end', $._expression),
        ),
      ),

    // `x as int`, `g as? Counter` (checked downcast, gives Option<T>)
    cast_expression: ($) =>
      prec.left(
        PREC.cast,
        seq(
          field('value', $._expression),
          'as',
          optional(field('checked', '?')),
          field('type', $._type),
        ),
      ),

    call_expression: ($) =>
      prec(
        PREC.postfix,
        seq(field('function', $._expression), field('arguments', $.argument_list)),
      ),

    argument_list: ($) => seq('(', optional(commaList($._expression)), ')'),

    field_expression: ($) =>
      prec(
        PREC.postfix,
        seq(field('object', $._expression), '.', field('field', $.identifier)),
      ),

    index_expression: ($) =>
      prec(
        PREC.postfix,
        seq(field('object', $._expression), '[', field('index', $._expression), ']'),
      ),

    // Postfix `?`: propagate an `err`/`none` to the caller.
    try_expression: ($) => prec(PREC.postfix, seq(field('value', $._expression), '?')),

    new_expression: ($) =>
      prec.right(
        seq(
          'new',
          field('type', choice($.generic_type, $.type_identifier, $.scoped_type_identifier)),
          optional(field('arguments', $.argument_list)),
        ),
      ),

    // size_of(T) / align_of(T) / offset_of(T, field) take a *type*, so they
    // cannot be ordinary calls. Contextual: special only right before `(`.
    layout_expression: ($) =>
      seq(
        field('operator', choice(...data.contextualKeywords.typeOperators)),
        '(',
        field('type', $._type),
        optional(seq(',', field('field', $.identifier))),
        ')',
      ),

    lambda_expression: ($) =>
      seq(
        'fn',
        field('parameters', $.parameter_list),
        optional(seq('->', field('return_type', $._type))),
        field('body', $.block),
      ),

    // One rule for both jobs: a statement `if` simply has no `else`.
    if_expression: ($) =>
      prec.right(
        seq(
          'if',
          field('condition', $._expression),
          field('consequence', $.block),
          optional(seq('else', field('alternative', choice($.block, $.if_expression)))),
        ),
      ),

    match_expression: ($) =>
      seq('match', field('value', $._expression), field('body', $.match_block)),

    match_block: ($) => seq('{', repeat(seq($.match_arm, optional(','))), '}'),

    match_arm: ($) =>
      seq(field('pattern', $._pattern), '=>', field('value', choice($.block, $._expression))),

    // Patterns follow Parser::parse_pattern / parse_pattern_atom exactly:
    // literals (possibly negative, possibly a range), a name with optional
    // typed bindings, `_`, and `|` alternation. Note that a payload holds
    // *bindings*, not nested patterns.
    _pattern: ($) => choice($.or_pattern, $._pattern_atom),

    or_pattern: ($) => seq($._pattern_atom, repeat1(seq('|', $._pattern_atom))),

    _pattern_atom: ($) =>
      choice(
        $.range_pattern,
        $.literal_pattern,
        $.variant_pattern,
        $.wildcard_pattern,
        $.identifier,
      ),

    // `some(value)`, `ok(n)`, `err(e)`, `circle(r: float)`
    variant_pattern: ($) =>
      seq(
        field('name', $.identifier),
        '(',
        optional(commaList($.pattern_binding)),
        ')',
      ),

    pattern_binding: ($) =>
      seq(field('name', $.identifier), optional(seq(':', field('type', $._type)))),

    literal_pattern: ($) => $._pattern_literal,

    // `3..=9`, `-10..=0`
    range_pattern: ($) =>
      seq(
        field('start', $._pattern_literal),
        choice('..', '..='),
        field('end', $._pattern_literal),
      ),

    _pattern_literal: ($) =>
      choice(
        $.integer_literal,
        $.float_literal,
        $.string_literal,
        $.raw_string_literal,
        $.boolean_literal,
        $.negative_literal,
      ),

    negative_literal: ($) => seq('-', choice($.integer_literal, $.float_literal)),

    list_literal: ($) => seq('[', optional(commaList($._expression)), ']'),
